fix: refactoring to use pagopa commons beans